# WotLK-Extensions

./: .gitignore  OLD-README.md  README.md
DevelopmentAddon/: Core.lua  DBCManager.lua  DebugTools.lua  DevelopmentAddon.toc  HotpatchManager.lua  MinimapButton.lua  PlayerTools.lua  TransmogTool.lua  UI.lua
WotLKExtensions/: CMakeLists.txt  CustomLua.cpp  CustomLua.h  CustomPacket.cpp  PatchConfig.h  SharedDefines.h
WotLKExtensions/GameData/: Addresses.h  Database.h  UpdateFields.h
WotLKExtensions/GameObjects/: CGObject.h
WotLKExtensions/Hotpatches/: HotpatchManager.cpp  SpellVisualPatches.cpp  SpellVisualPatches.h
WotLKExtensions/Memory/: MemoryProtect.h
